# prive

./: .gitignore  Readme.md  prive.py  pyproject.toml  sample.csv
src/prive/: __init__.py
