[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prive"
version = "0.1.0"
description = "A CLI tool to detect PII in files using Microsoft Presidio"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.9.0",
    "presidio-analyzer>=2.2.32",
]

[project.scripts]
prive = "prive.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
prive = ["py.typed"]